Fixed left margin spacing for small screen devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,9 +56,7 @@ body {
         padding-bottom: 0.2rem;
     }
 
-    *, ::after, ::before {
-        box-sizing: unset;
-    }
+    
 
     #introduction {
         --bs-gutter-x: 0;
